syntax = "proto3";

package es;

option go_package = "github.com/kucjac/cleango/eventsource";

// Event is the event source message model.
message Event {
  string event_id = 1;
  string event_type = 2;
  string aggregate_type = 3;
  string aggregate_id = 4;
  bytes event_data = 5;
  int64 timestamp = 6;
  int64 revision = 7;
}
